<resources>
    <string name="app_name">PlannerPlusPlus</string>

    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>

    <string name="menu_direct_to_log">Log</string>
    <string name="menu_direct_to_tasklist">Tasks</string>
    <string name="menu_direct_to_eventlist">Events</string>
    <string name="menu_share">Share</string>
    <string name="title_events_activity">Events_main_view</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>

    <string name="overwrite_placeholder">toBeOverWritten</string>
    <string name="title_overwrite_placeholder">Title</string>
    <string name="details_overwrite_placeholder">Description</string>
    <string name="placeholder_delete_all">Delete all items</string>
    <string name="save_button_title">Save</string>
    <string name="favourite_button">Favourite button</string>
    <string name="completed_task_divider_header">Completed [%1$d]</string>
    <string name="datetime_placeholder">Date@Time\n to\n Date@Time</string>
    <string name="add_task_as_requirement">add_task_as_requirement</string>
    <string name="add_task_button">Add Task</string>
    <string name="delete_button">delete_button</string>
</resources>
