<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical">
    <!-- todo code can be reused by declaring this as a custom component -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/title_overwrite_placeholder"
            android:id="@+id/add_linked_task_title"/>

    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
                                               tools:listitem="@layout/listitem_link_task"
                                               android:id="@+id/link_task_recyclerview"
                                               android:layout_marginStart="16dp"
                                               android:layout_marginEnd="16dp"
    />
    <Button
            android:id="@+id/add_task_button"
            android:text="@string/add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:contentDescription="@string/add_task_as_requirement"
            android:background="@android:color/white"
    />

</LinearLayout>