<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <CheckedTextView
            android:id="@+id/checked_view_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_overwrite_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toStartOf="@+id/favourite_icon"
            app:layout_constraintHorizontal_bias="0.0"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checked_view_task_title"
            app:layout_constraintStart_toStartOf="@id/checked_view_task_title"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/details_overwrite_placeholder"
            android:maxLines="1"
            android:ellipsize="end"
    />

    <!-- todo add favourite button support-->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favourite_icon"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            tools:srcCompat="@drawable/ic_star_border_black_24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/favourite_button"
    />

</androidx.constraintlayout.widget.ConstraintLayout>