<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginEnd="8dp"
                                   android:layout_marginStart="8dp"
                                   android:layout_marginTop="8dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">


        <TextView
                android:id="@+id/text_view_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/checkbox_task"
                android:text="@string/title_overwrite_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_toStartOf="@id/favourite_button"
        />

        <CheckBox
                android:id="@+id/checkbox_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
        />

        <TextView
                android:id="@+id/text_view_task_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_task_title"
                android:layout_toEndOf="@id/checkbox_task"
                android:layout_toStartOf="@id/favourite_button"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/details_overwrite_placeholder"
        />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_border_black_24dp"
                android:id="@+id/favourite_button"
                android:contentDescription="@string/favourite_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>