<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
                                   android:layout_marginEnd="8dp"
                                   android:layout_marginStart="8dp"
                                   android:layout_marginTop="8dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

        <TextView
                android:id="@+id/text_view_event_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:maxLines="1"
        />

        <TextView
                android:id="@+id/text_view_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/text_view_event_status"
                android:layout_toStartOf="@id/text_view_event_time"
                android:text="@string/title_overwrite_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:maxLines="1"
                android:ellipsize="end"
        /> <!--
            maxLines: Title will only occupy one line
            ellipsize: Title will have a ... at the end if truncated
            -->

        <TextView
                android:id="@+id/text_view_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/datetime_placeholder"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:maxLines="3"
                android:minLines="3"
                android:layout_alignParentTop="true"
        />

        <TextView
                android:id="@+id/text_view_event_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_event_title"
                android:layout_toStartOf="@id/text_view_event_time"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/details_overwrite_placeholder"
        />

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtasks_recycler_view"
                android:layout_below="@id/text_view_event_details"
                android:layout_alignParentStart="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                tools:listitem="@layout/subitem_task"
        />

    </RelativeLayout>

</androidx.cardview.widget.CardView>